--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "bootstrap-icons": "^1.4.0"
+    "bootstrap-icons": "^1.4.0",
+    "imask": "^6.0.7"
   }
 }
