--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
     "browser-sync": "^2.26.14",
     "css-mqpacker": "^7.0.0",
     "del": "^6.0.0",
@@ -22,22 +23,22 @@
     "gulp-file-include": "^2.3.0",
     "gulp-fonter": "^0.3.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-postcss": "^9.0.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-ttf2woff": "^1.1.1",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify-es": "^2.0.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "postcss": "^8.2.8"
   },
   "browserslist": [
-    "last 3 version",
+    "last 5 version",
     "> 1%",
-    "IE 10"
+    "not dead"
   ],
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "bootstrap-icons": "^1.4.0",
     "imask": "^6.0.7"
   }
 }
